Change data connections for SQL DataBase

--- a/Stands.Data/Web.config
+++ b/Stands.Data/Web.config
@@ -19,7 +19,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="DataEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLExpress;initial catalog=StandsDataBase;persist security info=True;user id=sa;password=Pfuhe5rf;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DataEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=devdb.ifin.ua;initial catalog=StandsDataBase;persist security info=True;user id=sa;password=StandsDataBase;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
