--- a/Stands.WebRole/Web.config
+++ b/Stands.WebRole/Web.config
@@ -11,8 +11,8 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DataEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLExpress;initial catalog=StandsDataBase;persist security info=True;user id=sa;password=Pfuhe5rf;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  <add name="IdentityConnection" connectionString="data source=.\SQLExpress;initial catalog=StandsDataBase;persist security info=True;user id=sa;password=Pfuhe5rf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DataEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=devdb.ifin.ua;initial catalog=StandsDataBase;persist security info=True;user id=sa;password=ecUJYaZLr8YDkEtc;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="IdentityConnection" connectionString="data source=devdb.ifin.ua;initial catalog=StandsDataBase;persist security info=True;user id=sa;password=ecUJYaZLr8YDkEtc;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
